# SnapShotTesting

./: .gitignore  Cargo.toml  docker-compose.yml  package-lock.json  readme.md
.github/workflows/: frontend.yml  rust.yml  webpack.yml
api/: .env.example  Cargo.toml  Dockerfile
api/bindings/: SnapShotBatchJob.ts  SnapShotBatchJobStatus.ts  api-docs.json
api/migrations/: 20241224140044_init.down.sql  20241224140044_init.up.sql
api/src/: lib.rs  main.rs
api/src/api/: errors.rs  extractors.rs  mod.rs  swagger_config.rs
api/src/api/routes/: handle_admin.rs  handle_get_all_running_jobs.rs  handle_get_job_by_id.rs  handle_get_snap_shot_by_id.rs  handle_get_snapshot_by_id.rs  handle_jobs.rs  handle_ping.rs  handle_snapshot.rs  mod.rs  snap_shot.rs  snap_shot_history.rs  snapshot_history.rs
api/src/db/: connection.rs  migrator.rs  mod.rs  redis_connection.rs  snap_shot_batch_job_store.rs  snap_shot_batch_store.rs  snap_shot_store.rs  snapshot_batch_job_store.rs  snapshot_batch_store.rs  snapshot_store.rs
api/src/lib/: capture_screen_shots.rs  capture_screenshots.rs  capture_screenshots_v2.rs  compare_images.rs  mod.rs  save_images.rs  story_book.rs
api/src/models/: app_state.rs  db_config.rs  env_variables.rs  mod.rs  raw_image.rs  snap_shot_batch.rs  snap_shot_response.rs  snapshot.rs  snapshot_batch.rs  snapshot_batch_job.rs  snapshot_batch_v2.rs
api/src/service/: mod.rs  snap_shot_history_service.rs  snap_shot_job_service.rs  snap_shot_service.rs  snapshot_history_service.rs  snapshot_job_service.rs  snapshot_service.rs
api/src/utils/: capture_screenshots.rs  compare_images.rs  diff_img.rs  env_variables.rs  mod.rs  save_images.rs  story_book.rs
db/: create-snap-shot-batches-table.sql  create-snap-shot-table.sql
fe/: .env  .eslintrc.cjs  .gitignore  Dockerfile  package-lock.json  package.json  tsconfig.json  vite.config.ts
fe/src/: App.css  App.tsx  Routes.tsx  constants.ts  index.css
fe/src/Layouts/: Layout.tsx
fe/src/api/: admin.api.ts  compareStoryBookUrls.api.ts  constants.ts  fetchSnapShotHistoryItem.api.ts  jobs.api.ts  snapShotHistory.api.ts
fe/src/components/: Loader.tsx  Navigation.tsx
fe/src/context/: navigationContext.tsx  pageTitleContext.tsx
fe/src/features/Admin/Page/: AdminPage.tsx
fe/src/features/CompareImagesHistorical/components/: DiffImageTab.tsx  ImageTab.tsx
fe/src/features/CompareImagesHistorical/pages/: CompareImagesHistoricalPage.tsx
fe/src/features/CompareImagesHistorical/utils/: getMenuItemsHistoricalPage.ts
fe/src/features/ErrorBoundary/: index.tsx
fe/src/types/: generated.ts  job.ts
fe/src/utils/: formatDateTime.ts
snap-shot-api/: Cargo.toml  Dockerfile
snap-shot-api/src/: main.rs
snap-shot-api/src/api/: errors.rs
snap-shot-api/src/api/routes/: snap_shot.rs  snap_shot_history.rs
snap-shot-api/src/db/: connection.rs  mod.rs  snap_shot_batch_store.rs  snap_shot_store.rs
snap-shot-api/src/lib/: compare_images.rs  date_format.rs  diff_img.rs  mod.rs  story_book.rs  story_book_config.rs
snap-shot-api/src/models/: app_state.rs  db_config.rs  mod.rs  snap_shot.rs  snap_shot_batch.rs
snap-shot-api/src/service/: snap_shot_service.rs
snap-shot-db/: create-snap-shot-batches-table.sql
snap-shot-testing-fe/: Dockerfile  package-lock.json  package.json  tsconfig.json
snap-shot-testing-fe/src/: App.css  App.tsx  index.css
snap-shot-testing-fe/src/api/: snapShotHistory.api.ts
snap-shot-testing-fe/src/features/ErrorBoundary/: index.tsx
snap-shot-testing-fe/src/utils/: getObjectEntries.ts
src/: main.rs
src/api/routes/: mod.rs  snap_shot.rs
src/lib/: capture_screen_shots.rs  compare_images.rs  mod.rs  story_book.rs
(+11 files in other folders)
