[package]
name    = "snap-shot-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diffimg            = { path = "../../rust/diffimg-rs" }
axum               = "0.7.5"
serde              = { version = "1.0.188", features = ["derive"] }
tokio              = { version = "1.32.0", features = ["full"] }
tower-http         = { version = "0.5.0", features = ["fs", "trace", "cors"] }
tower              = { version = "0.4", features = ["util"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest            = "0.12.4"
serde_with         = "3.8.1"
serde_as           = "0.0.1"
serde_json         = "1.0.117"
headless_chrome    = "1.0.10"
image              = "0.25.1"
futures-util       = "0.3.30"
short-uuid = "0.1.2"
num_cpus = "1.16.0"
anyhow = "1.0.86"

[lib]
name = "lib"
path = "src/lib/mod.rs"
